[package]
name = "just_out_of_tune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
itertools = "0.11.0"
num-traits = "0.2.15"
rug = {version = "1.19.2", features = ["num-traits"]}
